--- a/resources/views/HTML_PAGES/icons-bootstrap.html
+++ b/resources/views/HTML_PAGES/icons-bootstrap.html
@@ -1711,8 +1711,8 @@
           <div class="label">card-checklist</div>
         </div>
         <div class="icon">
-          <i class="bi bi-card-heading"></i>
-          <div class="label">card-heading</div>
+          <i class="bi bi-card-header"></i>
+          <div class="label">card-header</div>
         </div>
         <div class="icon">
           <i class="bi bi-card-image"></i>
