--- a/resources/views/HTML_PAGES/icons-bootstrap.html
+++ b/resources/views/HTML_PAGES/icons-bootstrap.html
@@ -4507,15 +4507,15 @@
           <div class="label">pen</div>
         </div>
         <div class="icon">
-          <i class="bi bi-pencil-fill"></i>
+          <i class="bi bi-pencil-square-fill"></i>
           <div class="label">pencil-fill</div>
         </div>
         <div class="icon">
-          <i class="bi bi-pencil-square"></i>
+          <i class="bi bi-pencil-square-square"></i>
           <div class="label">pencil-square</div>
         </div>
         <div class="icon">
-          <i class="bi bi-pencil"></i>
+          <i class="bi bi-pencil-square"></i>
           <div class="label">pencil</div>
         </div>
         <div class="icon">
